# x-IMU-GUI

./: .gitlab-ci.yml  CameraDispatcher_CodeReview.md  Dockerfile  Makefile  README-STM32-CI.md  README.md  advanced_sensor_options.py  code_review.md  communication_interfaces.py  config_system.py  demo_liquid_lens.py  docker-compose.yml  enhanced_smart_sleeve.py  example_usage.c  example_usage.py  liquid_lens_camera.py  liquid_lens_hardware.py  lv_conf_template.h  lv_custom_widget.c  lv_custom_widget.h  multi_sensor_example.py  requirements.txt  sensor_interfaces.py  smart_sleeve_system.py  test-local.sh
cmake/: arm-none-eabi-gcc.cmake
example-project/: CMakeLists.txt
example-project/Core/Inc/: main.h
example-project/Core/Src/: main.c
lvgl_pcie_driver/: Makefile  README.md
lvgl_pcie_driver/include/: lvgl_pcie_driver.h
lvgl_pcie_driver/src/: lvgl_pcie_buffer.c  lvgl_pcie_dma.c  lvgl_pcie_dma_chunked.c  lvgl_pcie_interrupt.c  lvgl_pcie_lvgl.c  lvgl_pcie_main.c
scripts/: build.sh  convert-cube-project.sh
